# Copykat_python

./: LICENSE  README.md  SINGULARITY_GUIDE.md  copykat_py.def  environment.yml  pyproject.toml  run_copykat_py.sh
copykat_py/: __init__.py  annotation.py  baseline.py  cli.py  convert_bins.py  copykat.py  data_loader.py  plotting.py  segmentation.py  smoothing.py
copykat_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
copykat_py/data/: DNA_hg20.csv  cyclegenes.csv  exp_rawdata_barcodes.txt
